--- a/ComputerShop/User_window.xaml
+++ b/ComputerShop/User_window.xaml
@@ -29,7 +29,8 @@
                 <DataGridTextColumn Binding="{Binding email}" Width="*" Header="Email"/>
             </DataGrid.Columns>
         </DataGrid >
-       
-      
+        <Button Content="remove" x:Name="btnRemove" Click="btnDel_Click" HorizontalAlignment="Left" Margin="445,202,0,0" VerticalAlignment="Top" Grid.Column="1"  />
+
+
     </Grid>
 </Window>
