Added checking for the existence of the user and updating the table

--- a/ComputerShop/User_window.xaml
+++ b/ComputerShop/User_window.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition Width="27*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Content="show users" Name="btnShow"  HorizontalAlignment="Left" Margin="445,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Button Content="обновить" Name="btnShow" Click="btnShow_Click" HorizontalAlignment="Left" Margin="445,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
         <Button Content="clear users" x:Name="btnShow_Copy" Click="btnClear_Click" HorizontalAlignment="Left" Margin="445,72,0,0" VerticalAlignment="Top" Grid.Column="1" />
         <Button Content="add users" x:Name="btnShow_Copy1" Click="btnAdd_Click" HorizontalAlignment="Left" Margin="446,115,0,0" VerticalAlignment="Top" Grid.Column="1"  />
         <Button Content="Назад" Click="btnBack_Click" HorizontalAlignment="Left" Margin="514,282,0,0" VerticalAlignment="Top" Grid.Column="1"/>
