Added removal of an item from the user's cart
Added removal of an item from the user's cart

--- a/ComputerShop/OrderWindow.xaml
+++ b/ComputerShop/OrderWindow.xaml
@@ -10,11 +10,13 @@
     <Grid>
         <DataGrid Grid.ColumnSpan="2" Margin="0,0,261,239" x:Name="ProductGrid"  AutoGenerateColumns="False"  AlternatingRowBackground="#FFC4B0B0" SelectionMode="Single">
             <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding TempID}" Width="*" Header="Id product"/>
                 <DataGridTextColumn Binding="{Binding name_product}" Width="*" Header="Name product"/>
                 <DataGridTextColumn Binding="{Binding price}" Width="*" Header="Price"/>
                 <DataGridTextColumn Binding="{Binding country}" Width="*" Header="Country"/>
                 <DataGridTextColumn Binding="{Binding manufacturer}" Width="*" Header="Manufacturer"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button Click="btnClick_Delete" Content="Delete" HorizontalAlignment="Left" Margin="46,261,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
