--- a/ComputerShop/App.xaml
+++ b/ComputerShop/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ComputerShop"
-             StartupUri="LoginScreen.xaml">
+             StartupUri="LoginScreen.xaml"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     <Application.Resources>
          
+
     </Application.Resources>
 </Application>
